--- a/src/view/ViewStylesheet.css
+++ b/src/view/ViewStylesheet.css
@@ -4,8 +4,14 @@
 #wordButton {
     -fx-font-weight: normal;
     -fx-background-color: white;
-    -fx-padding: 1 3;
+    -fx-padding: 1 2;
 }
 #wordButton:hover {
-    -fx-background-color: black;
+    -fx-background-color: deepskyblue;
+}
+#wordsPane {
+    -fx-min-width: 500px;
+}
+#mainHBox{
+    -fx-min-width: 500;
 }
